feat(sector): 섹터 일별 상세 데이터 수집 기능 추가 및 분석 로직 개편